[package]
name = "rusty-router-model"
version = "0.1.0"
authors = ["gazzasaur"]
edition = "2018"

[dependencies]
rusty-router-common = { workspace = true }

uuid = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
