[package]
name = "rusty-router-netlink"
version = "0.1.0"
authors = ["gazzasaur"]
edition = "2018"

[dependencies]
log = "0.4"
mockall = "0.9"

async-trait = "0.1"
tokio = { version = "1.5", features = ["full"] }

rand = "0.8"
rtnetlink = "0.7"
netlink-sys = "0.6"
netlink-packet-core = "0.2"
netlink-packet-route = "0.7"
rusty-router-model = { path = "../rusty-router-model" }
