[package]
name = "rusty-router-platform-linux"
version = "0.1.0"
authors = ["gazzasaur"]
edition = "2018"

[dependencies]
rusty-router-common = { workspace = true }
rusty-router-model = { path = "../rusty-router-model" }

log = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

libc = "0"
rtnetlink = "0"
netlink-packet-core = "0"
netlink-packet-route = "0"

nix = { workspace = true }
netlink-sys = { version = "0", features = ["tokio_socket"] }

[dev-dependencies]
anyhow = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }
lazy_static = { workspace = true }
