[package]
name = "rusty-router-platform-linux"
version = "0.1.0"
authors = ["gazzasaur"]
edition = "2018"

[dependencies]
rusty-router-model = { workspace = true }
rusty-router-common = { workspace = true }
rusty-router-proto-ip = { workspace = true }

log = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

nix = { workspace = true }
libc = { workspace = true }
rtnetlink = { workspace = true }
netlink-packet-core = { workspace = true }
netlink-packet-route = { workspace = true }
netlink-sys = { version = "0", features = ["tokio_socket"] }

[dev-dependencies]
anyhow = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }
lazy_static = { workspace = true }
