[package]
name = "rusty-router"
version = "0.1.0"
authors = ["gazzasaur"]
edition = "2018"

[dependencies]
nix = "0.20"
rtnetlink = "0.7"
serde_json = "1.0"
netlink-sys = "0.6"
netlink-packet-core = "0.2"
netlink-packet-route = "0.7"
rusty-router-model = { path = "../rusty-router-model" }
rusty-router-netlink = { path = "../rusty-router-netlink" }
