[package]
name = "rusty-router"
version = "0.1.0"
authors = ["gazzasaur"]
edition = "2018"

[dependencies]
env_logger = "0.8"

serde_json = "1.0"
rusty-router-model = { path = "../rusty-router-model" }
rusty-router-platform-linux = { path = "../rusty-router-platform-linux" }

tokio = { version = "1.5", features = ["full"] }
